--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,15 @@ astroid==3.2.4
 astunparse==1.6.3
 async-timeout==4.0.3
 attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 cachetools==5.3.3
 certifi==2024.6.2
+cffi==1.17.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
+cryptography==43.0.0
 dill==0.3.8
 distro==1.9.0
 exceptiongroup==1.2.1
@@ -35,6 +40,7 @@ importlib_metadata==8.0.0
 isort==5.13.2
 jax==0.4.13
 jaxlib==0.4.13
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 keras==2.10.0
@@ -49,6 +55,7 @@ MarkupSafe==2.1.5
 mccabe==0.7.0
 ml-dtypes==0.2.0
 multidict==6.0.5
+nltk==3.9.1
 numpy==1.24.4
 oauthlib==3.2.2
 openai==1.37.1
@@ -61,9 +68,11 @@ protobuf==3.19.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycodestyle==2.12.1
+pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
 pyflakes==3.2.0
+pylint==3.2.7
 PyMySQL==1.1.1
 PyYAML==6.0.1
 regex==2024.7.24
@@ -73,6 +82,7 @@ rsa==4.9
 scipy==1.10.1
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.31
 tenacity==8.4.2
 tensorboard==2.10.1
